変更の修正（やり直し）

--- a/www/index.html
+++ b/www/index.html
@@ -68,10 +68,7 @@ function updateCharacterCount(inputId, counterId, maxLength) {
 }
 
 // 投稿内容のバリデーション
-function validateContent(content,username) {
-    if(!content || !content.trim()){
-        username='名無し';
-    }
+function validateContent(content) {
     if (!content || !content.trim()) {
         showMessage('投稿内容を入力してください', 'error');
         return false;
@@ -123,9 +120,8 @@ function createPost(author, content) {
     postsRef.push(postData)
         .then(() => {
             showMessage('投稿が完了しました！');
-            $('#usernameInput').val('');
             $('#contentInput').val('');
-            updateCharacterCount('usernameInput','contentInput', 'contentCount', 1000);
+            updateCharacterCount('contentInput', 'contentCount', 1000);
         })
         .catch((error) => {
             showMessage('投稿に失敗しました：' + error.message, 'error');
@@ -355,14 +351,11 @@ function cancelEdit(postId) {
 
 // 投稿の更新
 function updatePost(postId) {
-    const usernameVal=$(`#edit-${postId}`).val();
-    if (!validateContent(usernameVal)) return;
     const contentVal = $(`#edit-${postId}`).val();
     if (!validateContent(contentVal)) return;
 
     // content の内容を変更し、updatedAt フィールドを付加して、更新後の投稿内容を生成
     const updates = {
-      //  username:usernameVal,
         content: contentVal,
         updatedAt: firebase.database.ServerValue.TIMESTAMP
     };
@@ -446,7 +439,7 @@ function logout() {
 
 // 認証フォームのクリア
 function clearAuthForm() {
-    $('#name').val('');
+  //  $('#name').val('');
     $('#loginEmail').val('');
     $('#loginPassword').val('');
 }
@@ -492,9 +485,8 @@ $(function() {
     $('#postButton').on('click', function() {
         // 投稿内容をフォームから取得
         const authorVal = $('#authorInput').val();
-        const usernameVal = $('#usernameInput').val();
         const contentVal = $('#contentInput').val();
-        createPost(authorVal, usernameInput,contentVal);
+        createPost(authorVal,contentVal);
     });
 
     $('#loginButton').on('click', function() {
@@ -567,12 +559,8 @@ window.addEventListener('unload', function() {
 
         <!-- 投稿フォーム（ログイン時表示） -->
         <div class="post-form logged-in">
-            <div class="form-group">
-                <label for="usernameInput">ニックネーム</label>
-                <textarea id="usernameInput" class="form-control" 
-                          placeholder="ニックネームを入力してください"></textarea>
-                <!--small class="character-count" id="contentCount">0/50</small-->
-            </div>
+
+            
             <div class="form-group">
                 <label for="contentInput">投稿内容</label>
                 <textarea id="contentInput" class="form-control" 
