--- a/www/index.html
+++ b/www/index.html
@@ -158,8 +158,10 @@ function getRelativeTime(timestamp) {
     const minutes = Math.floor(diff / 60000); 
     if (minutes < 1) return 'たった今'; 
     if (minutes < 60) return `${minutes}分前`;
-     // ... 他の時間範囲の処理
-       
+    if(hours>=1&&hours<24) return `今日`;
+    if(days=2) return `昨日`;
+    if(days>=3&&day<=365) return `${days}日前`;
+    if(years>1) return `${years}年前`;  
 }
 // 投稿の編集権限チェック
 function canEditPost(post) {
